@@ -1,3 +1,9 @@
+2002-08-28  Katsumi Yamaoka   <yamaoka@jpl.org>
+
+	* mime-edit.el (mime-edit-user-agent-value): Add
+	`xemacs-extra-name'.
+
+
 2002-07-08  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>
 
 	* SEMI: Version 1.14.4 (Hosorogi) released.
